# vending-machine-app

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
api/: settings.py  tests.py  urls.py  validators.py
products/: models.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py
users/: models.py  permissions.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
