[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Alexander Danilov <alexander.danilov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
django-rest-framework = "^0.1.0"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
